@@ -1,12 +1,15 @@
 #!/usr/bin/php
 <?php
 require_once ("/var/www/html/modules/agent_console/libs/ECCP.class.php");
+
+if (count($argv) < 2) die("Use: {$argv[0]} agentchannel\n");
+$agentname = $argv[1];
+
 $x = new ECCP();
 try {
 	print "Connect...\n";
 	$x->connect("localhost", "agentconsole", "agentconsole");
-	$x->setAgentNumber("Agent/9000");
-	$x->setAgentPass("gatito");
+	$x->setAgentNumber($agentname);
 	print_r($x->getAgentStatus());
 	print "Disconnect...\n";
 	$x->disconnect();
